apps/gitea-mirror/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror
spec:
  hostnames:
    - gitea-mirror.i.shikanime.studio
  parentRefs:
    - name: gitea-mirror
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror-redirect
spec:
  hostnames:
    - gitea-mirror.i.shikanime.studio
  parentRefs:
    - name: gitea-mirror
      sectionName: http
